# data-science

./: LICENSE  PEL309-Paper_Experiments.ipynb  PEL309-Paper_Visualization.ipynb  README.md  pyproject.toml  requirements.txt
smartphone-addiction/: PEL309-Full_Pipeline.ipynb  PEL309-Paper_Experiments.ipynb  README.md  pipeline.py
smartphone-addiction/documentation/: conclusion.md  conclusion.tex  methodology.md  methodology.tex  results_discussion.md  results_discussion.tex
